@@ -1541,63 +1541,13 @@ name|isShutdown
 argument_list|()
 condition|)
 block|{
-name|tpe
+name|ExecutorUtil
 operator|.
-name|shutdown
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-name|tpe
-operator|.
-name|awaitTermination
+name|shutdownAndAwaitTermination
 argument_list|(
-literal|60
-argument_list|,
-name|TimeUnit
-operator|.
-name|SECONDS
+name|tpe
 argument_list|)
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|InterruptedException
-name|e
-parameter_list|)
-block|{
-name|log
-operator|.
-name|warn
-argument_list|(
-literal|"Thread interrupted while waiting for OCP threadpool close."
-argument_list|)
-expr_stmt|;
-name|Thread
-operator|.
-name|currentThread
-argument_list|()
-operator|.
-name|interrupt
-argument_list|()
-expr_stmt|;
-block|}
-finally|finally
-block|{
-if|if
-condition|(
-operator|!
-name|tpe
-operator|.
-name|isShutdown
-argument_list|()
-condition|)
-name|tpe
-operator|.
-name|shutdownNow
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 block|}
 block|}
