@@ -1389,7 +1389,7 @@ finally|finally
 block|{
 name|ExecutorUtil
 operator|.
-name|shutdownNowAndAwaitTermination
+name|shutdownAndAwaitTermination
 argument_list|(
 name|coreZkRegister
 argument_list|)
