@@ -5154,7 +5154,7 @@ finally|finally
 block|{
 name|ExecutorUtil
 operator|.
-name|shutdownNowAndAwaitTermination
+name|shutdownAndAwaitTermination
 argument_list|(
 name|parallelExecutor
 argument_list|)
